linuxtips-kubernetes-expert/day09/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chatbot
  name: chatbot
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 10 # kubectl rollout history deployment -n nginx nginx-deployment
  selector:
    matchLabels:
      app: chatbot
  strategy:
    type: RollingUpdate # Atualização sem indisponibilidade
    rollingUpdate: 
      maxSurge: 1 # Máximo de pods extras
      maxUnavailable: 2 # Máximo de pods down
  template: 
    metadata:
        labels:
          app: chatbot
    spec:
      containers:
      - image: oydeu/dc-chatbot
        name: chatbot
        ports:
        - containerPort: 3000
