linuxtips-kubernetes-expert/day09/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: default
spec:
  replicas: 3
  revisionHistoryLimit: 10 # kubectl rollout history deployment -n nginx nginx-deployment
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate # Atualização sem indisponibilidade
    rollingUpdate: 
      maxSurge: 1 # Máximo de pods extras
      maxUnavailable: 2 # Máximo de pods down
  template: 
    metadata:
        labels:
          app: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.5"
            memory: 500Mi
          requests:
            cpu: "0.3"
            memory: 250Mi
